--- a/package.json
+++ b/package.json
@@ -11,17 +11,18 @@
     "cdk": "cdk"
   },
   "devDependencies": {
-    "@aws-cdk/assert": "1.97.0",
-    "@types/jest": "^26.0.10",
-    "@types/node": "10.17.27",
-    "jest": "^26.4.2",
-    "ts-jest": "^26.2.0",
-    "aws-cdk": "1.97.0",
-    "ts-node": "^9.0.0",
-    "typescript": "~3.9.7"
+    "@aws-cdk/assert": "1.98.0",
+    "@types/jest": "^26.0.22",
+    "@types/node": "14.14.41",
+    "aws-cdk": "1.98.0",
+    "jest": "^26.6.3",
+    "ts-jest": "^26.5.5",
+    "ts-node": "^9.1.1",
+    "typescript": "~4.2.4"
   },
   "dependencies": {
-    "@aws-cdk/core": "1.97.0",
-    "source-map-support": "^0.5.16"
+    "@aws-cdk/core": "1.98.0",
+    "@r-token/s3-static-website-construct": "^0.7.0",
+    "source-map-support": "^0.5.19"
   }
 }
